# gnasque

./: .gitignore  LICENSE  README.md  build_linux.sh  build_linux_venv.sh  build_windows.bat  build_windows.sh  geoip-ir.srs  install.bat  install.sh  projectrules.txt  pyproject.toml
aur/: PKGBUILD  gnasque.desktop
gnasque/: __init__.py  cli.py  core.py  gui_tk.py
gnasque.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
gnasque/webui/static/: script.js  style.css
